--- a/css/style.css
+++ b/css/style.css
@@ -53,4 +53,12 @@ body {
   width: 60%;
   transform: rotate(25deg);
 }
+.mountains {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  z-index: 1; /* под текстом и кнопками */
+}
 
