--- a/css/style.css
+++ b/css/style.css
@@ -61,4 +61,19 @@ body {
   width: 80%;
   z-index: 1; /* под текстом и кнопками */
 }
+.cloud-left {
+  position: absolute;
+  top: 50px;
+  left: 20px;
+  width: 150px;
+  z-index: 10;
+}
+
+.cloud-right {
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  width: 150px;
+  z-index: 10;
+}
 
